vfTasks changelog
==================

Version 1.0.0 alpha
-------------

- initial public release, released April 7, 2011


Version 1.1.0 alpha
-------------

- added Windows support